manifests/estimator/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: estimator
  labels:
    app: estimator
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: estimator
