manifests/estimator/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: estimator
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    external-dns.alpha.kubernetes.io/target: "217.78.182.161"
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "false"
    cert-manager.io/cluster-issuer: "cloudflare-issuer"
spec:
  rules:
    - host: eta.lex.la
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: estimator
                port:
                  number: 8080
  tls:
    - hosts:
        - eta.lex.la
      secretName: estimator-tls
